feat(songs): implemet feature (controller, service, repository) - add docs for songs feature - update README.md
