# Golang/gin-songs-api/models/entity/song.go
@@ -5,7 +5,7 @@ import "time"
 type Song struct {
 	ID          string
 	Title       string
-	AlbumID     string
+	Album       Album
 	Duration    int64
 	ReleaseDate *time.Time
 	CreatedAt   time.Time
